--- a/HeroesOfPymoli/Output/style.css
+++ b/HeroesOfPymoli/Output/style.css
@@ -1,5 +1,4 @@
 * {
-    background-color: #eeeeee;
   margin: 0rem;
   padding: 0rem;
   text-align: center;
@@ -11,6 +10,14 @@ table, thead, th, tr, td {
     text-align: center;
 }
 
+h1, p {
+    background-color: rgba(0, 0, 0, 0);
+}
+
+h4 {
+    padding: 0.5rem;
+}
+
 .tables,
 .pymoli-jumbo {
   margin: 2rem auto;
@@ -18,7 +25,6 @@ table, thead, th, tr, td {
 }
 
 .pymoli-jumbo {
-    background-color: rgba(0, 0, 0, 0);
     background-image: url('Fantasy.png');
     background-position: center;
 }
