Readme, plus tweaks

--- a/HeroesOfPymoli/Output/style.css
+++ b/HeroesOfPymoli/Output/style.css
@@ -25,6 +25,6 @@ h4 {
 }
 
 .pymoli-jumbo {
-    background-image: url('Fantasy.png');
+    background-image: url('../images/Fantasy.png');
     background-position: center;
 }
